--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
     "angular-cli-ghpages": "^1.0.0-rc.1",
+    "gh-pages": "^3.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -46,5 +47,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  }
+  },
+  "homepage": "https://isaacrazabi.github.io/Isaac-angular-ptoject/"
 }
